# ros-triton-image-classifier

./: CMakeLists.txt  README.md  package.xml  setup.py
msg/: Classification.msg  ObjectHypothesisWithClassName.msg
nodes/: classifier
src/triton_image_classifier/: node.py  triton_api.py
triton/: Dockerfile  triton-inference-server.service
