<?xml version="1.0"?>
<package format="2">
    <name>triton_image_classifier</name>
    <version>1.0.0</version>
    <description>Triton Inference Client for Image Classification</description>
    <license>MIT</license>

    <url type="repository">https://github.com/whoigit/ros-triton-image-classifier</url>

    <maintainer email="rgovostes@whoi.edu">Ryan Govostes</maintainer>

    <author email="rgovostes@whoi.edu">Ryan Govostes</author>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <depend>std_msgs</depend>
</package>
